fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/Sample_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Sample Request Line Item</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Sample Request Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>