fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Confirm_Transfer_of_Stock__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Transfer_of_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used to confirm transfer of field stock to another person.  Only the person the stock is being transferred to can check this box.</description>
    <inlineHelpText>Field is used to confirm transfer of field stock to another person.  Only the person the stock is being transferred to can check this box.</inlineHelpText>
    <label>Confirm Transfer of Stock</label>
    <type>Checkbox</type>
</CustomField>