fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <description>For reps to use to type in an exception for certain product samples.</description>
    <inlineHelpText>For reps to use to type in an exception for certain product samples.</inlineHelpText>
    <label>Exception</label>
    <type>TextArea</type>
</CustomField>