fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Field_Sales_Stock__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value for number of samples that become sale stock.</description>
    <inlineHelpText>Value for number of samples that become sale stock.</inlineHelpText>
    <label>Field Sales Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>