fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Invoiced_Sales_Tracking_Key__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Sales_Tracking_Key__c</fullName>
    <formula>Material_Name__c &amp; &quot;-&quot; &amp; Sample_Request__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced Sales Tracking Key</label>
    <type>Text</type>
</CustomField>