fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>Material_Name__c  &amp; &quot;-&quot; &amp;  Sample_Request__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>