fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/MantaDemoCount__c.field-meta.xml
<CustomField>
    <fullName>MantaDemoCount__c</fullName>
    <label>Manta Demo Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>