fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sample Request Line Items</relationshipLabel>
    <relationshipName>Sample_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>