fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Name__c</fullName>
    <formula>Material__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Name</label>
    <type>Text</type>
</CustomField>