fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Number_of_Clinicians__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Clinicians__c</fullName>
    <description>Number of clinicians receiving samples.</description>
    <inlineHelpText>Number of clinicians receiving samples.</inlineHelpText>
    <label>Number of Clinicians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>