fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/ProductRepPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductRepPrice__c</fullName>
    <formula>Material__r.Rep_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Rep Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>