fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Qty_Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Qty_Sales_Unit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Show quantity by sales unit for each line item.</description>
    <inlineHelpText>Show quantity by sales unit for each line item.</inlineHelpText>
    <label>Qty/Sales Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>