fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Sample_Request__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request__c</fullName>
    <label>Sample Request</label>
    <referenceTo>Sample_Request__c</referenceTo>
    <relationshipLabel>Sample Request Line Items</relationshipLabel>
    <relationshipName>Sample_Request_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>