fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Sample_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Status__c</fullName>
    <formula>TEXT(Sample_Request__r.Status__c)</formula>
    <label>Sample Request Status</label>
    <type>Text</type>
</CustomField>