fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Samples_Per_Clinician__c.field-meta.xml
<CustomField>
    <fullName>Samples_Per_Clinician__c</fullName>
    <description>Field calculates samples per clinician to enforce only 5 samples per.</description>
    <formula>IF(
Number_of_Clinicians__c = 0,
0,
IF( 
NOT( ISBLANK( Exception__c ) ),
1,
Actual_Evaulation_Number__c / Number_of_Clinicians__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field calculates samples per clinician to enforce only 5 samples per.</inlineHelpText>
    <label>Samples Per Clinician</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>