fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Shipping_Info__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Info__c</fullName>
    <formula>NOT(ISBLANK(Shipping_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Info</label>
    <type>Checkbox</type>
</CustomField>