fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Shipping_Priority__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Priority__c</fullName>
    <label>Shipping Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>