fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Shipping_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Tracking__c</fullName>
    <label>Shipping Tracking</label>
    <type>Url</type>
</CustomField>