fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Shipping_Tracking_Number_Count__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Tracking_Number_Count__c</fullName>
    <label>Shipping Tracking Number Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>