fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Stock_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Stock_on_Hand__c</fullName>
    <description>Reflects current stock on hand.</description>
    <formula>Field_Sales_Stock__c  -  Transferred_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects current stock on hand.</inlineHelpText>
    <label>Stock on Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>