fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Transferred_Stock__c.field-meta.xml
<CustomField>
    <fullName>Transferred_Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stock transferred to another person.</description>
    <inlineHelpText>Stock transferred to another person.</inlineHelpText>
    <label>Transferred Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>