fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/Transferred_To__c.field-meta.xml
<CustomField>
    <fullName>Transferred_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>