fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>