fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/validationRules/Can_only_transfer_from_Field_Sales_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_only_transfer_from_Field_Sales_Stock</fullName>
    <active>true</active>
    <description>You can only transfer from &quot;Field Sales Stock&quot;.  Meaning you cannot order extra inventory just to transfer to another person.</description>
    <errorConditionFormula>NOT( ISNEW() ) &amp;&amp; Transferred_Stock__c &gt; 0 &amp;&amp; OR( Field_Sales_Stock__c = 0, ISBLANK(Field_Sales_Stock__c), Transferred_Stock__c &gt; Field_Sales_Stock__c )</errorConditionFormula>
    <errorDisplayField>Transferred_Stock__c</errorDisplayField>
    <errorMessage>You can only transfer stock that you have in the &quot;Field Sales Stock&quot; field.</errorMessage>
</ValidationRule>