fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/validationRules/Cannot_Edit_Approved_Line_Item_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Approved_Line_Item_Record</fullName>
    <active>false</active>
    <description>Validation rule to lock a record after approved. The record is unlocked via Approval to allow transfer of stock between users at the line item level.</description>
    <errorConditionFormula>AND(
TEXT( Sample_Request__r.Status__c ) = &apos;Ready&apos;,
NOT( ISCHANGED(  Transferred_Stock__c )),
NOT( ISCHANGED(  Transferred_To__c )),
NOT( ISCHANGED(  Confirm_Transfer_of_Stock__c ))
)</errorConditionFormula>
    <errorMessage>An approved record cannot be edited.</errorMessage>
</ValidationRule>