fullSandbox11072023/force-app/main/default/objects/Sample_Request_Line_Item__c/validationRules/No_Line_Items_upon_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Line_Items_upon_approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Sample_Request__r.Status__c, &quot;Ready&quot;),
    ISNEW())</errorConditionFormula>
    <errorMessage>Sorry, you cannot enter line items in an approved Sample Request</errorMessage>
</ValidationRule>